--- a/src/components/navigation/navbar.css
+++ b/src/components/navigation/navbar.css
@@ -10,6 +10,7 @@
     row-gap: 0px;
     height: 175px;
     transition: all 0.125s;
+    z-index: 10;
 }
 
 #logo-container {
